2002-02-28   Barry Fishman  <bfishman@users.sf.net>

	* clx.f (CONVERT-SELECTION): clean up the stack
	(SELECTION-NOTIFY): added window notification

2002-02-28  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (require): push *load-truename* on *load-paths*
	* compiler.lisp (c-REQUIRE): push *compile-file-truename*
	on *load-paths*

2002-02-28  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-form): fixed a bug: EXPAND-COMPILER-MACRO
	can return an atom

2002-02-28  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/linux.lisp (substitution): map DEFCONSTANT

2002-02-28  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-write-lib): bind *PRINT-SYMBOLS-LONG* when
	writing *.lib files, just like with *.fas files

2002-02-27  Sam Steingold  <sds@gnu.org>

	implemented weak hash-tables
	* hashtabl.d (MAKE-HASH-TABLE): accept :WEAK keyword argument
	(rehash, hash_store, REMHASH, MAPHASH, HASH-TABLE-ITERATE)
	(CLASS-TUPLE-GETHASH): use ht_kvtable()/kvtable_data()
	(hash_lookup): remove obsolete key/value from a weak HT
	(prepare_resize): accept third argument `weak'
	(resize): handle weak hash-tables
	(HASH-TABLE-WEAK-P, %SET-HASH-TABLE-WEAK-P): implemented
	(sxhash_atom): handle WeakKVT
	* constobj.d (all_weakkvtables, hs_weakkvt): new objects
	(version): bumped because of the MAKE-HASH-TABLE change
	* constsym.d (hash_table_weak_p, set_hash_table_weak_p, Kweak)
	(weak_kvtable): added
	* init.lisp (hash-table-weak-p, weak-key-value-table):
	export from EXT
	* io.d (pr_weakkvt): new pr_routine_t
	(prin_object_dispatch): use it to print a Weak KVT
	(pr_kvtable): handle weak KVTs
	* lispbibl.d (weakkvt_type, case_weakkvt, Rectype_WeakKVT): added
	(ht_weak_p, kvtable_data, ht_kvt_data): new macros
	(weakkvt_t): new lrecord
	(TheSarray, TheVarobject, ThePointer): added weakkvt_type
	(Weakkvt_length, TheWeakKVT, weakkvtp, case_Rectype_WeakKVT_above):
	concomitant macros
	(if_recordp): Rectype_WeakKVT is not a record
	(allocate_weakkvt): declare